--- a/src/Webviews/airline-data/style.css
+++ b/src/Webviews/airline-data/style.css
@@ -7,11 +7,15 @@
 	--color-dark-secondary: hsl(190, 11%, 50%);
 	--color-dark-tertiary: hsla(190, 11%, 50%, 0.25);
 
+	--color-card-background: rgba(255, 255, 255, 0.02);
+
 	--font-sans-serif: 'Fredoka', var(--vscode-font-family), sans-serif;
 	--font-sans-serif-secondary: 'Montserrat', var(--vscode-font-family), sans-serif;
 	--font-serif: 'Noto Serif Display', serif;
 
 	--anim-length: 0.2s;
+
+	--border-radius: 0.25em;
 }
 
 body {
@@ -25,14 +29,16 @@ body.vscode-light {
 	--color-secondary: var(--color-dark-secondary);
 	--color-tertiary: var(--color-dark-tertiary);
 
-	--color-logo-shadow: rgba(74, 91, 94, 0.5);
+	--color-logo-shadow: rgba(74, 91, 94, 0.065);
+	--color-card-shadow: rgba(25, 30, 31, 0.1);
 }
 body.vscode-dark {
 	--color-main: var(--color-light);
 	--color-secondary: var(--color-light-secondary);
 	--color-tertiary: var(--color-light-tertiary);
 
-	--color-logo-shadow: rgba(255, 255, 255, 0.5);
+	--color-logo-shadow: rgba(255, 255, 255, 0.065);
+	--color-card-shadow: rgba(25, 30, 31, 0.4);
 }
 body.vscode-high-contrast {
 	color: red;
@@ -70,30 +76,37 @@ header h1 {
 	justify-content: center;
 	text-align: center;
 }
+header h1.has-logo {
+	background-image: radial-gradient(closest-side, var(--color-logo-shadow), transparent);
+}
 
 .logo {
 	max-width: 500px;
 }
-.logo img {
+/* .logo img {
 	filter: drop-shadow(0px 0px 5px var(--color-logo-shadow));
-}
+} */
 
 .subHeader {
-	display: flex;
+	display: grid;
+	/* grid-template-columns: 1fr min-content 1fr; */
+	grid-template-columns: max-content min-content max-content;
 	gap: 0.2em 1.5em;
 	align-items: center;
 	justify-content: center;
 
+	color: var(--color-secondary);
 	font-size: 1.1em;
 	font-weight: 500;
 	letter-spacing: 0.3em;
-
-	color: var(--color-secondary);
 }
 .subHeader > div {
 	display: flex;
 	gap: 0.75em;
 	align-items: center;
+}
+.subHeader > div:nth-child(3n + 1) {
+	justify-self: end;
 }
 
 /* .subHeader .icao,
@@ -214,8 +227,8 @@ section.grid div.grid-item > h2 {
 	display: flex;
 	align-items: center;
 	gap: 1em;
-	/* height: 1.5em; */
-	padding: 0 0 0.5em 0;
+	padding: 0.5em 0;
+	margin-block-start: 0;
 
 	background-color: var(--vscode-editor-background);
 	position: sticky;
@@ -232,7 +245,14 @@ table {
 }
 table th {
 	padding: 0.5em 1em;
+
+	font-family: var(--font-sans-serif-secondary);
+	font-size: 0.7em;
+	font-weight: 500;
+	letter-spacing: 3px;
+	opacity: 0.7;
 	text-align: left;
+	text-transform: uppercase;
 }
 table.sortable th {
 	cursor: pointer;
@@ -261,7 +281,11 @@ table tr td {
 	padding: 0.5em 1em;
 }
 table tr td:first-child {
+	border-radius: var(--border-radius) 0 0 var(--border-radius);
 	padding-right: 3em;
+}
+table tr td:last-child {
+	border-radius: 0 var(--border-radius) var(--border-radius) 0;
 }
 table td:not(:first-child) div {
 	color: var(--color-secondary);
@@ -337,7 +361,7 @@ button {
 	outline: none;
 	border: none;
 	padding: 0.75em 2em;
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 	cursor: pointer;
 	font-family: var(--font-sans-serif);
 	letter-spacing: 2px;
@@ -351,4 +375,11 @@ button.secondary {
 }
 button.secondary:hover {
 	background-color: var(--vscode-button-secondaryHoverBackground);
+}
+
+/* CARD */
+.card {
+	background-color: var(--color-card-background);
+	border-radius: var(--border-radius);
+	box-shadow: 0 0 1.5em var(--color-card-shadow);
 }
