--- a/src/Webviews/airline-data/style.css
+++ b/src/Webviews/airline-data/style.css
@@ -226,6 +226,7 @@ section.grid.col-3:after {
 section.grid div.grid-item > h2 {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 	gap: 1em;
 	padding: 0.5em 0;
 	margin-block-start: 0;
@@ -242,9 +243,11 @@ table {
 	padding: 1rem;
 	border: 1px solid var(--color-tertiary);
 	width: 100%;
+
+	--cell-padding: 0.5rem 1rem;
 }
 table th {
-	padding: 0.5em 1em;
+	padding: var(--cell-padding);
 
 	font-family: var(--font-sans-serif-secondary);
 	font-size: 0.7em;
@@ -278,7 +281,7 @@ table tr td {
 	transform: scaleY(1);
 	height: auto;
 	margin: 0;
-	padding: 0.5em 1em;
+	padding: var(--cell-padding);
 }
 table tr td:first-child {
 	border-radius: var(--border-radius) 0 0 var(--border-radius);
