--- a/res/Webviews/airline-view/style.css
+++ b/res/Webviews/airline-view/style.css
@@ -1,389 +1,401 @@
+@charset "UTF-8";
 :root {
-	--color-light: #f0f0f0;
-	--color-light-secondary: rgb(210, 236, 255);
-	--color-light-tertiary: rgba(210, 236, 255, 0.25);
-
-	--color-dark: hsl(189, 12%, 33%);
-	--color-dark-secondary: hsl(190, 11%, 50%);
-	--color-dark-tertiary: hsla(190, 11%, 50%, 0.25);
-
-	--color-card-background: rgba(255, 255, 255, 0.02);
-
-	--font-sans-serif: 'Fredoka', var(--vscode-font-family), sans-serif;
-	--font-sans-serif-secondary: 'Montserrat', var(--vscode-font-family), sans-serif;
-	--font-serif: 'Noto Serif Display', serif;
-
-	--anim-length: 0.2s;
-
-	--border-radius: 0.25em;
+  --color-card-background: rgba(255, 255, 255, 0.02);
+  --border-radius: 0.25em;
 }
 
 body {
-	color: var(--color-main);
-	font-family: var(--font-sans-serif);
-	font-size: var(--vscode-editor-font-size);
+  color: var(--color-main);
+  font-family: "Fredoka", var(--vscode-font-family), sans-serif;
+  font-size: var(--vscode-editor-font-size);
 }
 
 body.vscode-light {
-	--color-main: var(--color-dark);
-	--color-secondary: var(--color-dark-secondary);
-	--color-tertiary: var(--color-dark-tertiary);
-
-	--color-logo-shadow: rgba(74, 91, 94, 0.2);
-	--color-card-shadow: rgba(25, 30, 31, 0.1);
+  --color-main: #4a5b5e;
+  --color-secondary: #71898e;
+  --color-tertiary: rgba(113, 137, 142, 0.25);
+  --color-logo-shadow: rgba(74, 91, 94, 0.2);
+  --color-card-shadow: rgba(25, 30, 31, 0.1);
 }
+
 body.vscode-dark {
-	--color-main: var(--color-light);
-	--color-secondary: var(--color-light-secondary);
-	--color-tertiary: var(--color-light-tertiary);
-
-	--color-logo-shadow: rgba(255, 255, 255, 0.065);
-	--color-card-shadow: rgba(25, 30, 31, 0.4);
+  --color-main: #f0f0f0;
+  --color-secondary: #d2ecff;
+  --color-tertiary: rgba(210, 236, 255, 0.25);
+  --color-logo-shadow: rgba(255, 255, 255, 0.065);
+  --color-card-shadow: rgba(25, 30, 31, 0.4);
 }
+
 body.vscode-high-contrast {
-	color: red;
+  color: red;
 }
 
 h1,
 h2,
 h3 {
-	font-family: var(--font-serif);
+  font-family: "Noto Serif Display", serif;
 }
 
-/* TODO https://code.visualstudio.com/api/references/theme-color */
-/*
-    --vscode-editor-font-family - Editor font family (from the editor.fontFamily setting).
-    --vscode-editor-font-weight - Editor font weight (from the editor.fontWeight setting).
-    --vscode-editor-font-size - Editor font size (from the editor.fontSize setting).
-*/
-
 code {
-	color: var(--vscode-editor-foreground);
+  color: var(--vscode-editor-foreground);
 }
 
 /* HEADER */
 header {
-	border-bottom: 1px solid var(--color-secondary);
-	margin-bottom: 2em;
-	padding-bottom: 1em;
+  border-bottom: 1px solid var(--color-secondary);
+  margin-bottom: 2em;
+  padding-bottom: 1em;
 }
 
 header h1 {
-	font-size: 3em;
-	margin-block-end: 0.25em;
-
-	display: flex;
-	justify-content: center;
-	text-align: center;
+  font-size: 3em;
+  margin-block-end: 0.25em;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
+
 header h1.has-logo {
-	background-image: radial-gradient(closest-side, var(--color-logo-shadow), transparent);
+  background-image: radial-gradient(closest-side, var(--color-logo-shadow), transparent);
 }
 
 .logo {
-	max-width: 500px;
+  max-width: 500px;
 }
+
 /* .logo img {
-	filter: drop-shadow(0px 0px 5px var(--color-logo-shadow));
-} */
-
+	  filter: drop-shadow(0px 0px 5px var(--color-logo-shadow));
+  } */
 .subHeader {
-	--hGap: 1.5em;
-	display: flex;
-	gap: 0.2em var(--hGap);
-	align-items: center;
-	justify-content: center;
+  --hGap: 1.5em;
+  display: flex;
+  gap: 0.2em var(--hGap);
+  align-items: center;
+  justify-content: center;
+  color: var(--color-secondary);
+  font-size: 1.1em;
+  font-weight: 500;
+  letter-spacing: 0.3em;
+}
 
-	color: var(--color-secondary);
-	font-size: 1.1em;
-	font-weight: 500;
-	letter-spacing: 0.3em;
-}
 .subHeader > div {
-	display: flex;
-	gap: calc(var(--hGap) * 0.5);
-	align-items: center;
+  display: flex;
+  gap: calc(var(--hGap) * 0.5);
+  align-items: center;
 }
+
 .subHeader > div:not(:last-child):after {
-	content: '•';
-	padding-left: calc(var(--hGap) * 0.5);
+  content: '•';
+  padding-left: calc(var(--hGap) * 0.5);
 }
 
 /* ICONS */
 i.icon {
-	display: block;
-	height: 1em;
-	width: 1em;
-
-	background-color: var(--color-secondary);
-	-webkit-mask-position: center center;
-	mask-position: center center;
-	-webkit-mask-repeat: no-repeat;
-	mask-repeat: no-repeat;
-	-webkit-mask-size: contain;
-	mask-size: contain;
+  display: block;
+  height: 1em;
+  width: 1em;
+  background-color: var(--color-secondary);
+  -webkit-mask-position: center center;
+  mask-position: center center;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: contain;
+  mask-size: contain;
 }
 
 i.icon.brackets-curly {
-	-webkit-mask-image: url(./icons/brackets-curly.svg);
-	mask-image: url(./icons/brackets-curly.svg);
+  -webkit-mask-image: url(./icons/brackets-curly.svg);
+  mask-image: url(./icons/brackets-curly.svg);
 }
+
 i.icon.calendar-alt {
-	-webkit-mask-image: url(./icons/calendar-alt.svg);
-	mask-image: url(./icons/calendar-alt.svg);
+  -webkit-mask-image: url(./icons/calendar-alt.svg);
+  mask-image: url(./icons/calendar-alt.svg);
 }
+
 i.icon.fingerprint {
-	-webkit-mask-image: url(./icons/fingerprint.svg);
-	mask-image: url(./icons/fingerprint.svg);
+  -webkit-mask-image: url(./icons/fingerprint.svg);
+  mask-image: url(./icons/fingerprint.svg);
 }
+
 i.icon.microphone {
-	-webkit-mask-image: url(./icons/microphone.svg);
-	mask-image: url(./icons/microphone.svg);
+  -webkit-mask-image: url(./icons/microphone.svg);
+  mask-image: url(./icons/microphone.svg);
 }
+
 i.icon.plane-arrival {
-	-webkit-mask-image: url(./icons/plane-arrival.svg);
-	mask-image: url(./icons/plane-arrival.svg);
+  -webkit-mask-image: url(./icons/plane-arrival.svg);
+  mask-image: url(./icons/plane-arrival.svg);
 }
+
 i.icon.plane-departure {
-	-webkit-mask-image: url(./icons/plane-departure.svg);
-	mask-image: url(./icons/plane-departure.svg);
+  -webkit-mask-image: url(./icons/plane-departure.svg);
+  mask-image: url(./icons/plane-departure.svg);
 }
+
 i.icon.user-edit {
-	-webkit-mask-image: url(./icons/user-edit.svg);
-	mask-image: url(./icons/user-edit.svg);
+  -webkit-mask-image: url(./icons/user-edit.svg);
+  mask-image: url(./icons/user-edit.svg);
 }
 
 /* Grid */
 section.grid {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: stretch;
-	justify-content: space-between;
-	gap: 3em;
-}
-section.grid > div.grid-item {
-	align-self: stretch;
-	/* flex: 1; */
-	min-width: 350px;
-}
-section.grid > div.grid-item:first-child {
-	order: 1;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-between;
+  gap: 3em;
 }
 
-section.grid:before,
-section.grid:after {
-	content: '';
-	border-left: 1px solid var(--color-secondary);
-	align-self: stretch;
-	display: none;
+section.grid > div.grid-item {
+  align-self: stretch;
+  /* flex: 1; */
+  min-width: 350px;
+}
+
+section.grid > div.grid-item:first-child {
+  order: 1;
+}
+
+section.grid:before, section.grid:after {
+  content: '';
+  border-left: 1px solid var(--color-secondary);
+  align-self: stretch;
+  display: none;
 }
 
 section.grid.col-2 > div.grid-item:nth-child(2),
 section.grid.col-3 > div.grid-item:nth-child(2) {
-	order: 3;
-}
-section.grid.col-2:before,
-section.grid.col-3:before {
-	display: block;
-	order: 2;
-}
-section.grid.col-3 > div.grid-item:nth-child(3) {
-	order: 5;
-}
-section.grid.col-3:after {
-	display: block;
-	order: 4;
+  order: 3;
 }
 
-@media (max-width: 700px) {
-	.grid.col-2 {
-		align-items: center;
-		flex-direction: column;
-	}
-	.grid.col-2:before,
-	.grid.col-2:after {
-		border-left: none;
-		border-top: 1px solid var(--color-secondary);
-	}
+section.grid.col-2:before {
+  display: block;
+  order: 2;
 }
-@media (max-width: 1050px) {
-	.grid.col-3 {
-		align-items: center;
-		flex-direction: column;
-	}
-	.grid.col-3:before,
-	.grid.col-3:after {
-		border-left: none;
-		border-top: 1px solid var(--color-secondary);
-	}
+
+section.grid.col-3:before {
+  display: block;
+  order: 2;
+}
+
+section.grid.col-3 > div.grid-item:nth-child(3) {
+  order: 5;
+}
+
+section.grid.col-3:after {
+  display: block;
+  order: 4;
 }
 
 section.grid div.grid-item > h2 {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: 1em;
-	padding: 0.5em 0;
-	margin-block-start: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1em;
+  padding: 0.5em 0;
+  margin-block-start: 0;
+  background-color: var(--vscode-editor-background);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
 
-	background-color: var(--vscode-editor-background);
-	position: sticky;
-	top: 0;
-	z-index: 1;
+@media (max-width: 700px) {
+  .grid.col-2 {
+    align-items: center;
+    flex-direction: column;
+  }
+  .grid.col-2:before, .grid.col-2:after {
+    border-left: none;
+    border-top: 1px solid var(--color-secondary);
+  }
+}
+
+@media (max-width: 1050px) {
+  .grid.col-3 {
+    align-items: center;
+    flex-direction: column;
+  }
+  .grid.col-3:before, .grid.col-3:after {
+    border-left: none;
+    border-top: 1px solid var(--color-secondary);
+  }
 }
 
 /* Table */
 table {
-	background: transparent;
-	padding: 1rem;
-	border: 1px solid var(--color-tertiary);
-	width: 100%;
-
-	--cell-padding: 0.5rem 1rem;
+  background: transparent;
+  padding: 1rem;
+  border: 1px solid var(--color-tertiary);
+  width: 100%;
+  --cell-padding: 0.5rem 1rem;
 }
+
 table th {
-	padding: var(--cell-padding);
+  padding: var(--cell-padding);
+  font-family: "Montserrat", var(--vscode-font-family), sans-serif;
+  font-size: 0.7em;
+  font-weight: 500;
+  letter-spacing: 3px;
+  opacity: 0.7;
+  text-align: left;
+  text-transform: uppercase;
+}
 
-	font-family: var(--font-sans-serif-secondary);
-	font-size: 0.7em;
-	font-weight: 500;
-	letter-spacing: 3px;
-	opacity: 0.7;
-	text-align: left;
-	text-transform: uppercase;
-}
 table.sortable th {
-	cursor: pointer;
-	position: relative;
+  cursor: pointer;
+  position: relative;
 }
+
 table.sortable th:after {
-	content: '';
-	padding-left: 0.5em;
-	position: absolute;
+  content: '';
+  padding-left: 0.5em;
+  position: absolute;
 }
+
 table.sortable th.no-sort {
-	cursor: default;
-	pointer-events: none;
+  cursor: default;
+  pointer-events: none;
 }
+
 table.sortable th.dir-u:after {
-	content: '▴';
+  content: '▴';
 }
+
 table.sortable th.dir-d:after {
-	content: '▾';
+  content: '▾';
 }
 
 table tr td {
-	transform: scaleY(1);
-	height: auto;
-	margin: 0;
-	padding: var(--cell-padding);
-}
-table tr td:first-child {
-	border-radius: var(--border-radius) 0 0 var(--border-radius);
-	padding-right: 3em;
-}
-table tr td:last-child {
-	border-radius: 0 var(--border-radius) var(--border-radius) 0;
-}
-table td:not(:first-child) div {
-	color: var(--color-secondary);
-	display: flex;
-	align-items: center;
-	gap: 1em;
-}
-table td .secondary {
-	font-family: var(--font-sans-serif-secondary);
-	font-size: 0.8em;
-	opacity: 0.8;
-}
-table tr:nth-of-type(even) td {
-	background: var(--vscode-tree-tableOddRowsBackground);
-}
-/* table tr:not(:nth-child(-n + 10)) {
-} */
-table.hidden tr:not(:nth-child(-n + 10)) {
-	display: none;
+  transform: scaleY(1);
+  height: auto;
+  margin: 0;
+  padding: var(--cell-padding);
 }
 
+table tr td:first-child {
+  border-radius: var(--border-radius) 0 0 var(--border-radius);
+  padding-right: 3em;
+}
+
+table tr td:last-child {
+  border-radius: 0 var(--border-radius) var(--border-radius) 0;
+}
+
+table td:not(:first-child) div {
+  color: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+table td .secondary {
+  font-family: "Montserrat", var(--vscode-font-family), sans-serif;
+  font-size: 0.8em;
+  opacity: 0.8;
+}
+
+table tr:nth-of-type(even) td {
+  background: var(--vscode-tree-tableOddRowsBackground);
+}
+
+table.hidden tr:not(:nth-child(-n + 10)) {
+  display: none;
+}
+
+/* table tr:not(:nth-child(-n + 10)) {
+  } */
 /* Definition List */
 dl.table {
-	display: grid;
-	grid-template-columns: auto 1fr;
-	gap: 0;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0;
+  background: transparent;
+  padding: 1rem;
+  border: 1px solid var(--color-tertiary);
+}
 
-	background: transparent;
-	padding: 1rem;
-	border: 1px solid var(--color-tertiary);
+dl.table dt {
+  margin: 0;
+  padding: 0.5em 1em;
+  transform: scaleY(1);
+  height: auto;
 }
-dl.table dt,
+
 dl.table dd {
-	margin: 0;
-	padding: 0.5em 1em;
-	transform: scaleY(1);
-	height: auto;
+  margin: 0;
+  padding: 0.5em 1em;
+  transform: scaleY(1);
+  height: auto;
+  color: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  gap: 1em;
 }
-dl.table dd {
-	color: var(--color-secondary);
-	display: flex;
-	align-items: center;
-	gap: 1em;
-}
+
 dl.table dd .secondary {
-	font-family: var(--font-sans-serif-secondary);
-	font-size: 0.8em;
-	opacity: 0.8;
+  font-family: "Montserrat", var(--vscode-font-family), sans-serif;
+  font-size: 0.8em;
+  opacity: 0.8;
 }
+
 dl.table dt:nth-of-type(even),
 dl.table dd:nth-of-type(even) {
-	background: var(--vscode-tree-tableOddRowsBackground);
+  background: var(--vscode-tree-tableOddRowsBackground);
 }
+
 dt.hideable,
 dd.hideable {
-	transition: transform var(--anim-length), height var(--anim-length), padding-top var(--anim-length),
-		padding-bottom var(--anim-length);
+  transition: transform 0.2s, height 0.2s, padding-top 0.2s, padding-bottom 0.2s;
 }
+
 dl.hidden dt.hideable,
 dl.hidden dd.hideable {
-	transform: scaleY(0);
-	height: 0;
-	padding-top: 0;
-	padding-bottom: 0;
+  transform: scaleY(0);
+  height: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 /* BUTTON */
 button {
-	background: var(--vscode-button-background);
-	color: var(--vscode-button-foreground);
-	transition: background-color var(--anim-length);
+  background: var(--vscode-button-background);
+  color: var(--vscode-button-foreground);
+  transition: background-color 0.2s;
+  outline: none;
+  border: none;
+  padding: 0.75em 2em;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--vscode-button-border);
+  cursor: pointer;
+  font-family: "Fredoka", var(--vscode-font-family), sans-serif;
+  letter-spacing: 2px;
+}
 
-	outline: none;
-	border: none;
-	padding: 0.75em 2em;
-	border-radius: var(--border-radius);
-	cursor: pointer;
-	font-family: var(--font-sans-serif);
-	letter-spacing: 2px;
-}
 button:hover {
-	background-color: var(--vscode-button-hoverBackground);
+  background-color: var(--vscode-button-hoverBackground);
 }
+
 button.secondary {
-	background-color: var(--vscode-button-secondaryBackground);
-	color: var(--vscode-button-secondaryForeground);
+  background-color: var(--vscode-button-secondaryBackground);
+  color: var(--vscode-button-secondaryForeground);
 }
+
 button.secondary:hover {
-	background-color: var(--vscode-button-secondaryHoverBackground);
+  background-color: var(--vscode-button-secondaryHoverBackground);
 }
 
 /* CARD */
 .card {
-	background-color: var(--color-card-background);
-	border-radius: var(--border-radius);
-	box-shadow: 0 0 1.5em var(--color-card-shadow);
+  background-color: var(--color-card-background);
+  border-radius: var(--border-radius);
+  box-shadow: 0 0 1.5em var(--color-card-shadow);
 }
 
 /* ROUTEMAP */
 #routemap #map {
-	width: 100%;
-	height: 500px;
+  width: 100%;
+  height: 500px;
 }
+/*# sourceMappingURL=style.css.map */
