--- a/src/Webviews/airline-view/style/_base.scss
+++ b/src/Webviews/airline-view/style/_base.scss
@@ -33,12 +33,18 @@ body {
 	--body-padding: 1em;
 	padding: 0 var(--body-padding);
 
+	--color-pill-active-background: var(--vscode-activityBarBadge-background);
+	--color-pill-active-foreground: var(--vscode-activityBarBadge-foreground);
+	--color-pill-foreground: #{transparentize(colors.$dark, 0.5)};
+
 	&.vscode-light {
 		--color-main: #{colors.$dark};
 		--color-secondary: #{colors.$dark-secondary};
 		--color-tertiary: #{colors.$dark-tertiary};
 		--color-logo-shadow: rgba(74, 91, 94, 0.2);
 		--color-card-shadow: rgba(25, 30, 31, 0.1);
+
+		--color-pill-background: #{colors.$light-inactive};
 	}
 
 	&.vscode-dark {
@@ -47,6 +53,8 @@ body {
 		--color-tertiary: #{colors.$light-tertiary};
 		--color-logo-shadow: rgba(255, 255, 255, 0.065);
 		--color-card-shadow: rgba(25, 30, 31, 0.4);
+
+		--color-pill-background: #{colors.$dark-inactive};
 	}
 
 	&.vscode-high-contrast {
