--- a/src/Webviews/airline-view/style/_colors.scss
+++ b/src/Webviews/airline-view/style/_colors.scss
@@ -2,9 +2,17 @@
 $light: #f0f0f0;
 $light-secondary: rgb(210, 236, 255);
 $light-tertiary: rgba(210, 236, 255, 0.25);
+$light-inactive: rgb(213 215 216 / 30%);
+
 $dark: hsl(189, 12%, 33%);
 $dark-secondary: hsl(190, 11%, 50%);
 $dark-tertiary: hsla(190, 11%, 50%, 0.25);
+$dark-inactive: $light-tertiary;
 
 // Element colors
 $card-background: rgba(255, 255, 255, 0.02);
+
+/* Routemap GCM colors */
+// $gcm: SpringGreen, Tomato, SkyBlue, PaleVioletRed, NavajoWhite, MintCream, DarkOrchid, LimeGreen, Gold, DeepPink, Coral, DodgerBlue, GhostWhite, Thistle;
+$gcm: #00ff7f, #ff6347, #87ceeb, #d87093, #ffdead, #f5fffa, #9932cc, #32cd32, #ffd700, #ff1493, #ff7f50, #1e90ff,
+	#f8f8ff, #d8bfd8;
