--- a/src/Webviews/airline-view/style/_routemap.scss
+++ b/src/Webviews/airline-view/style/_routemap.scss
@@ -53,11 +53,51 @@
 	}
 }
 
+#map {
+	--color-card-shadow: rgb(0 0 58 / 50%);
+}
+
+nav.aircraft-types {
+	.checkbox-container {
+		height: 3.2em; // effective height of .checkbox-pill.all
+		position: relative;
+	}
+}
+
+#update-delay-bar {
+	width: 0;
+	height: 5px;
+	border-radius: 5px;
+	background-color: var(--color-secondary);
+
+	position: absolute;
+	bottom: 0;
+
+	&.run {
+		animation: update-delay 2s ease-in;
+	}
+}
+
+/**
+ * Routemap loading indicator (spinning circle line)
+ */
 @keyframes loading-indicator {
 	0% {
 		transform: rotate(0deg);
 	}
 	100% {
 		transform: rotate(360deg);
+	}
+}
+
+/**
+ * Routemap update delay bar (horizontal bar decreasing in width)
+ */
+@keyframes update-delay {
+	from {
+		width: 100%;
+	}
+	to {
+		width: 0;
 	}
 }
