--- a/res/Webviews/airline-view/style.css
+++ b/res/Webviews/airline-view/style.css
@@ -25,7 +25,8 @@ body {
 	color: var(--color-main);
 	font-family: "Fredoka", var(--vscode-font-family), sans-serif;
 	font-size: var(--vscode-editor-font-size);
-	padding: 1em;
+	--body-padding: 1rem;
+	padding: var(--body-padding);
 	--color-light: #f0f0f0;
 	--color-dark: hsl(189deg, 12%, 33%);
 	--color-pill-active-background: var(--vscode-activityBarBadge-background);
@@ -234,8 +235,8 @@ section.grid div.grid-item > h2:before {
 	background-color: var(--vscode-editor-background);
 	box-shadow: 0 5px 5px var(--vscode-editor-background);
 	position: absolute;
-	width: calc(100% + 2 * var(--card-shadow-blur));
-	left: calc(var(--card-shadow-blur) * -1);
+	width: calc(100% + 2 * var(--body-padding));
+	left: calc(var(--body-padding) * -1);
 	height: 100%;
 	z-index: 0;
 }
