--- a/src/Webviews/compare-fleet/style/style.css
+++ b/src/Webviews/compare-fleet/style/style.css
@@ -1,4 +1,71 @@
 @charset "UTF-8";
+/* Routemap GCM colors */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+:root {
+  --border-radius: 0.25em;
+  --card-shadow-blur: 1.5em;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Noto Serif Display", serif;
+}
+
+code {
+  color: var(--vscode-editor-foreground);
+}
+
+body {
+  color: var(--color-main);
+  font-family: "Fredoka", var(--vscode-font-family), sans-serif;
+  font-size: var(--vscode-editor-font-size);
+  --body-padding: 1rem;
+  padding: var(--body-padding);
+  --color-light: #f0f0f0;
+  --color-dark: hsl(189, 12%, 33%);
+  --color-pill-active-background: var(--vscode-activityBarBadge-background);
+  --color-pill-active-foreground: var(--vscode-activityBarBadge-foreground);
+}
+body.vscode-light {
+  --color-main: hsl(189, 12%, 33%);
+  --color-secondary: hsl(190, 11%, 50%);
+  --color-tertiary: hsla(190, 11%, 50%, 0.25);
+  --color-logo-shadow: rgba(74 91 94 / 50%);
+  --color-card-shadow: rgba(25 30 31 / 10%);
+  --color-pill-background: rgba(213, 215, 216, 0.3);
+  --color-pill-foreground: rgba(74, 91, 94, 0.5);
+}
+body.vscode-dark {
+  --color-main: #f0f0f0;
+  --color-secondary: rgb(210, 236, 255);
+  --color-tertiary: rgba(210, 236, 255, 0.25);
+  --color-logo-shadow: rgba(255 255 255 / 17.5%);
+  --color-card-shadow: rgba(25 30 31 / 40%);
+  --color-pill-background: rgba(210, 236, 255, 0.25);
+  --color-pill-foreground: rgba(240, 240, 240, 0.5);
+}
+body.vscode-high-contrast {
+  color: red;
+}
+
+.text-align-left {
+  text-align: left;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
 /* HEADER */
 header {
   border-bottom: 1px solid var(--color-secondary);
@@ -43,4 +110,112 @@ header h1 {
 .subHeader > div:not(:last-child):after {
   content: "•";
   padding-left: calc(var(--hGap) * 0.5);
+}
+
+/* TABLE */
+table {
+  background: transparent;
+  padding: 1rem;
+  border: 1px solid var(--color-tertiary);
+  width: 100%;
+}
+table th {
+  padding: 0.5rem 1rem;
+  font-family: "Montserrat", var(--vscode-font-family), sans-serif;
+  font-size: 0.7em;
+  font-weight: 500;
+  letter-spacing: 3px;
+  opacity: 0.7;
+  text-align: left;
+  text-transform: uppercase;
+}
+table.sortable th {
+  cursor: pointer;
+  position: relative;
+}
+table.sortable th:after {
+  content: "";
+  padding-left: 0.5em;
+  position: absolute;
+}
+table.sortable th.no-sort {
+  cursor: default;
+  pointer-events: none;
+}
+table.sortable th.dir-u:after {
+  content: "▴";
+}
+table.sortable th.dir-d:after {
+  content: "▾";
+}
+table tr:nth-of-type(even) td {
+  background: var(--vscode-tree-tableOddRowsBackground);
+}
+table tr td {
+  transform: scaleY(1);
+  height: auto;
+  margin: 0;
+  padding: 0.5rem 1rem;
+}
+table tr td:first-child {
+  border-radius: var(--border-radius) 0 0 var(--border-radius);
+  padding-right: 3em;
+}
+table tr td:last-child {
+  border-radius: 0 var(--border-radius) var(--border-radius) 0;
+}
+table tr td:not(:first-child) > div {
+  color: var(--color-secondary);
+  display: grid;
+  grid-template-columns: max-content max-content;
+  align-items: center;
+  gap: 0 1em;
+}
+table tr td:not(:first-child) > div *:nth-child(2n+1) {
+  text-align: right;
+}
+table tr td .secondary {
+  color: var(--color-secondary);
+  font-family: "Montserrat", var(--vscode-font-family), sans-serif;
+  font-size: 0.8em;
+  opacity: 0.8;
+}
+table tr td ul.secondary {
+  list-style: none;
+  margin: 0;
+  padding-inline: 0;
+}
+table tr td ul.secondary.inset {
+  margin: 0.25em 0;
+  padding-inline: 1em;
+}
+table.hidden tr:not(:nth-child(-n+10)) {
+  display: none;
+}
+table ul.livery-titles,
+table ul.livery-count,
+table ul.aircraft-types {
+  display: none;
+}
+table.show-titles ul.livery-titles,
+table.show-titles ul.livery-count {
+  display: block;
+}
+table.show-aircraft-types ul.aircraft-types {
+  display: block;
+}
+
+table#compare td {
+  color: var(--color-secondary);
+}
+table#compare td.pos {
+  color: #89d185;
+  color: var(--vscode-notebookStatusSuccessIcon-foreground); /* */
+}
+table#compare td.neg {
+  color: #ff5555;
+  color: var(--vscode-notebookStatusErrorIcon-foreground);
+}
+table#compare td.equal, table#compare td.none {
+  opacity: 0.5;
 }/*# sourceMappingURL=style.css.map */
