--- a/src/Webviews/compare-fleet/style/style.scss
+++ b/src/Webviews/compare-fleet/style/style.scss
@@ -1,1 +1,7 @@
+@use '../../_Shared/_colors';
+@use '../../_Shared/_fonts';
+
+@use '../../_Shared/_base';
 @use '_header';
+@use '../../_Shared/_table';
+@use '_table2';
